--- a/treeview/build.xml
+++ b/treeview/build.xml
@@ -161,6 +161,18 @@
   <property name="install.log" value=".${name}.install"/>
   <property name="install.overwrite" value="true"/>
 
+  <!-- Local webstart properties. Note this needs a local keystore,
+   !   assumed to be called keystore in $star.build.dir, .. by
+   !   default. -->
+  <property name="webstart.codebase" 
+           value="http://www.starlink.ac.uk/starjava/lib"/>
+  <property name="webstart.alias" value="Starlink-UK"/>
+  <property name="webstart.keystore" value="${star.build.dir}/keystore"/>
+  <property name="webstart.keypass" value="Vroomfondel"/>
+  <property name="webstart.storepass" value="Majikthise"/>
+  <property name="webstart.starlink_logo" value="starlink_logo_med.gif"/>
+  <property name="home.page" value="http://www.starlink.ac.uk/${name}"/>
+
   <!-- Add any local ANT tasks that are required (these should be
    !   moved to ANT if useful beyond the needs of this package) -->
 
@@ -636,6 +648,90 @@
       </manifest>
     </jar>
 
+    <!-- Sign all jar files -->
+    <signjar alias="${webstart.alias}"
+             keystore="${webstart.keystore}"
+             keypass="${webstart.keypass}"
+             storepass="${webstart.storepass}">
+      <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip" 
+               excludes="**/showndx.jar"/>
+    </signjar>
+
+  </target>
+
+  <!--
+   !   ========================================
+   !   Make package JNLP file for Java webstart
+   !   ========================================
+   !-->
+  <target name="webstart"
+          description="-> create webstart descriptor files">
+
+    <!-- Create a webstart JNLP file for this package, this goes into
+     !   "dist.lib" -->
+    <mkdir dir="${dist.lib}"/>
+    <jnlp toFile="${dist.lib}/${name}.jnlp" href="${name}.jnlp"
+          codebase="${webstart.codebase}">
+      <information>
+         <title>Treeview - a tool for displaying hierarchical structures</title>
+         <vendor>Starlink UK</vendor>
+         <homepage href="${home.page}"/>
+         <icon href="${webstart.starlink_logo}"/>
+         <description>"Starlink Treeview - Webstart edition"</description>
+         <offline_allowed/>
+       </information>
+       <security>
+          <all_permissions/>
+       </security>
+       <resources>
+         <j2se version="1.4+"/>
+         <jar href="${name}/${name}.jar"/>
+         <extension name="TREEVIEW-PARTS" href="${name}-parts.jnlp"/>
+
+         <!-- Decouple potential circular dependencies -->
+         <extension name="TOPCAT-PARTS" href="topcat-parts.jnlp"/>
+         <extension name="SPLAT-PARTS" href="splat-parts.jnlp"/>
+       </resources>
+       <application_desc main_class="uk.ac.starlink.treeview.Driver"/>
+     </jnlp>
+
+     <!-- May be needed as a component so provide that too -->
+     <jnlp toFile="${dist.lib}/${name}-parts.jnlp" href="${name}-parts.jnlp"
+          codebase="${webstart.codebase}">
+      <information>
+         <title>Treeview - a tool for displaying hierarchical structures</title>
+         <vendor>Starlink UK</vendor>
+         <homepage href="${home.page}"/>
+         <icon href="${webstart.starlink_logo}"/>
+         <description>"Starlink Treeview - Webstart edition"</description>
+         <offline_allowed/>
+       </information>
+       <security>
+          <all_permissions/>
+       </security>
+       <resources>
+         <j2se version="1.4+"/>
+         <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"
+                  excludes="**/showndx.jar" />
+         <jar href="ant.jar"/>
+ 
+         <extension name="ARRAY" href="array.jnlp"/>
+         <extension name="TABLE-PARTS" href="table-parts.jnlp"/>
+         <extension name="FITS" href="fits.jnlp"/>
+         <extension name="UTIL" href="util.jnlp"/>
+         <extension name="HDS" href="hds.jnlp"/>
+         <extension name="HDX" href="hdx.jnlp"/>
+         <extension name="NDX" href="ndx.jnlp"/>
+         <extension name="VOTABLE" href="votable.jnlp"/>
+         <extension name="JSKY-PARTS" href="jsky-parts.jnlp"/>
+         <extension name="JAIUTIL" href="jaiutil.jnlp"/>
+         <extension name="SOG-PARTS" href="sog-parts.jnlp"/>
+         <extension name="JNIAST" href="jniast.jnlp"/>
+         <extension name="JNIHDS" href="jnihds.jnlp"/>
+       </resources>
+       <component_desc/>
+     </jnlp>
+
   </target>
 
   <!--
@@ -654,7 +750,7 @@
    !  targets.
    !-->
   <target name="dist"
-          depends="build,jars,javadocs"
+          depends="build,jars,javadocs,webstart"
           unless="runonly.install"
           description="-> configures the local binary distribution">
 
@@ -903,6 +999,7 @@
                 overwrite="${install.overwrite}"
                 logfileAppend="true">
       <fileset dir="${dist.lib}">
+        <include name="**/*.jnlp"/>
         <include name="**/*.jar"/>
         <include name="**/*.zip"/>
       </fileset>
